--- a/index.css
+++ b/index.css
@@ -39,6 +39,8 @@ ul {
     padding:1px;
     margin:0px;
     border-radius: 30px;
+    overflow:hidden; 
+    overflow-y:scroll;
 }
 
 ul li {
@@ -63,7 +65,7 @@ ul li {
     margin:10px;
     padding: 30px;
     padding-left: 30px;
-    width: 510px;
+    width: 500px;
     display: inline-block;
     background-color: #dddddd;
     text-align: left;
