--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ h3 {
 }
 
 .container {
+    
     min-width: 250px;
     background-color: rgb(255, 255, 255);
     margin:15px;
@@ -39,6 +40,7 @@ ul {
     padding:1px;
     margin:0px;
     border-radius: 30px;
+    height: 1850px;
     overflow:hidden; 
     overflow-y:scroll;
 }
@@ -65,7 +67,7 @@ ul li {
     margin:10px;
     padding: 30px;
     padding-left: 30px;
-    width: 500px;
+    width: 490px;
     display: inline-block;
     background-color: #dddddd;
     text-align: left;
