--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html, body {
 
 h1 {
     text-align: center;
-    font-size: 90px;
+    font-size: 30px;
     font-weight:bold;
     color: white;
     margin: 0;
@@ -18,7 +18,7 @@ h1 {
 
 h3 {
     text-align: center;
-    font-size: 60px;
+    font-size: 10px;
     color: white;
     font-weight: normal;
     margin: 0;
@@ -28,19 +28,18 @@ h3 {
 }
 
 .container {
-    
     min-width: 250px;
     background-color: rgb(255, 255, 255);
-    margin:15px;
+    margin:10px;
     padding: 20px;
-    border-radius: 50px;
+    border-radius: 30px;
 }
 
 ul {
     list-style-type: none;
     padding:1px;
     margin:0px;
-    border-radius: 30px;
+    border-radius: 15px;
     height: 1850px;
     overflow:hidden; 
     overflow-y:scroll;
@@ -50,34 +49,34 @@ ul li {
     background-color: #fffdf800;
     padding: 5px;
     margin: 0px;
-    border-radius: 40px;
+    border-radius: 15px;
     border:0;
-    font-size: 50px;
+    font-size: 18px;
     text-align: center;
 }
 
 .urgencia {
-    padding: 30px;
-    margin:10px;
-    width: 60px;
+    padding: 5px;
+    margin:5px;
+    width: 30px;
     height: auto;
     text-align: center;
 }
 
 .item   {
-    margin:10px;
-    padding: 30px;
-    padding-left: 30px;
-    width: 490px;
+    margin:5px;
+    padding: 5px;
+    padding-left: 15px;
+    width: 50%;
     display: inline-block;
     background-color: #dddddd;
     text-align: left;
 }
 
 .cantidad {
-    margin:10px;
-    padding: 30px;
-    width: 100px;
+    margin:5px;
+    padding: 5px;
+    width: 40px;
     display: inline-block;
     background-color: #dddddd;
     text-align: center;
