--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@ h3 {
     background-color: rgb(255, 255, 255);
     margin:0px;
     padding: 10px;
+    padding-top: 20px;
     border-radius: 30px;
 }
 
