--- a/index.css
+++ b/index.css
@@ -6,6 +6,31 @@ html, body {
     color: #432000;
 }
 
+.loginForm {
+    text-align: center;
+}
+
+input{
+    margin:5px;
+    padding: 10px;
+    border: 0;
+    border-radius: 15px;
+    background-color: #dddddd;
+    text-align: center;
+    font-size: 30px;
+}
+
+button{
+    margin:15px;
+    padding: 10px;
+    border: 0;
+    border-radius: 15px;
+    background-color: #A1231E;
+    color: white;
+    text-align: center;
+    font-size: 30px;
+}
+
 h1 {
     text-align: center;
     font-size: 30px;
