--- a/index.css
+++ b/index.css
@@ -10,6 +10,17 @@ html, body {
     text-align: center;
 }
 
+select{
+    margin:5px;
+    width: 98%;
+    padding: 10px;
+    border: 0;
+    border-radius: 15px;
+    background-color: #dddddd;
+    text-align: center;
+    font-size: 20px;
+}
+
 input{
     margin:5px;
     width: 200px;
