--- a/index.css
+++ b/index.css
@@ -21,7 +21,8 @@ html, body {
     text-align: center;
 }
 .setSelect{
-    width: 45%;
+    width: 220px;
+    height: 50px;
     background-color: #dddddd;
 }
 
