--- a/index.css
+++ b/index.css
@@ -27,6 +27,9 @@ html, body {
 }
 
 select{
+    -moz-appearance: none; 
+    -webkit-appearance: none; 
+    appearance: none;
     margin:10px;
     margin-top: 5px;
     padding: 10px;
