--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #fdbebc;
+    background-color: #fff3f3;
     font-family: 'Gotham', sans-serif;
     color: #432000;
 }
