--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #fff3f3;
+    background-color: #d4d4d4;
     font-family: 'Gotham', sans-serif;
     color: #432000;
 }
@@ -66,7 +66,7 @@ h1 {
     text-align: center;
     font-size: 30px;
     font-weight:bold;
-    color: white;
+    color:  #A1231E;
     margin: 0;
     margin-top: 10px;
     
@@ -75,7 +75,7 @@ h1 {
 h3 {
     text-align: center;
     font-size: 16px;
-    color: white;
+    color:  #A1231E;
     font-weight: normal;
     margin: 0;
     padding: 0;
