--- a/index.css
+++ b/index.css
@@ -108,7 +108,7 @@ ul {
 .link {
     text-align: center;
     font-size: 16px;
-    color: white;
+    color:  #A1231E;
     font-weight: normal;
     margin: 0;
     padding: 0;
