--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ html, body {
     align-content: left;
     margin-left: 20px;
     padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .chooseSelect{
