--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ html, body {
     text-align: left;
     align-content: left;
     margin-left: 20px;
+    margin-top: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
 }
