aligned mod date to right

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ html, body {
     flex-wrap:nowrap;
     text-align: left;
     align-content: left;
-    margin-left: 20px;
+    margin-left: 67%;
     margin-top: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
