--- a/index.css
+++ b/index.css
@@ -16,10 +16,15 @@ html, body {
     flex-wrap:nowrap;
     text-align: left;
     align-content: left;
-    margin-left: 67%;
+    margin-left: 5%;
     margin-top: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
+}
+a{
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 5px;
 }
 
 .chooseSelect{
@@ -122,7 +127,8 @@ ul {
     font-size: 16px;
     color:  #A1231E;
     font-weight: normal;
-    margin: 0;
+    margin-left: 15px;
+    margin-right: 15px;
     padding: 0;
     margin-bottom: 10px;
     padding-bottom: 10px;
