--- a/index.css
+++ b/index.css
@@ -10,6 +10,10 @@ html, body {
     text-align: center;
 }
 
+.header{
+    text-decoration: none;
+}
+
 .subinfo{
     font-size: 12px;
     color: grey;
