--- a/index.css
+++ b/index.css
@@ -27,11 +27,6 @@ html, body {
     padding-top: 2px;
     padding-bottom: 0px;
 }
-a{
-    margin-left: 15px;
-    margin-right: 15px;
-    padding: 5px;
-}
 
 .chooseSelect{
     width: 95%;
@@ -128,16 +123,28 @@ ul {
     text-align: center;
 }
 
-.link {
+.link{
     text-align: center;
-    font-size: 16px;
-    color:  #A1231E;
-    font-weight: normal;
     margin-left: 15px;
     margin-right: 15px;
     padding: 0;
     margin-bottom: 10px;
     padding-bottom: 10px;
+}
+
+a.linkbutton{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 16px;
+    color:  white;
+    background-color: #A1231E;
+    font-weight: normal;
+    border: 3px solid #A1231E;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
+    margin-top: 2px;
+    width: 25%;
 }
 
 ul li {
@@ -172,10 +179,10 @@ ul li {
 }
 
 .item:hover {
-  color: #fff;
-  border: none;
-  transition: all 0.5s ease-in-out;
-  background-color: rgb(227, 64, 64);
+    color: #fff;
+    border: none;
+    transition: all 0.5s ease-in-out;
+    background-color: rgb(227, 64, 64);
 }
 
 .cantidad {
