--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #ececec;
+    background-color: #393939;
     font-family: 'Gotham', sans-serif;
-    color: #432000;
+    color: #000000;
 }
 
 .loginForm {
@@ -29,10 +29,11 @@ html, body {
 }
 
 .chooseSelect{
+    font-size: 28px;
     width: 95%;
     text-align: center;
-    background-color:  #A1231E;
-    color: white;
+    background-color:  #b2b2b2;
+    color: rgb(49, 49, 49);
     
 }
 .centered{
@@ -84,7 +85,7 @@ h1 {
     text-align: center;
     font-size: 30px;
     font-weight:bold;
-    color:  #A1231E;
+    color:  white;
     margin: 0;
     margin-top: 10px;
     
@@ -93,7 +94,7 @@ h1 {
 h3 {
     text-align: center;
     font-size: 16px;
-    color:  #A1231E;
+    color:  white;
     font-weight: normal;
     margin: 0;
     padding: 0;
