--- a/summary.css
+++ b/summary.css
@@ -1,7 +1,8 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #393939;
+    background-image: url('https://as2.ftcdn.net/v2/jpg/01/83/50/03/1000_F_183500322_FlkTJuJJkfrnGnRmLS4nVisf8ipIdmGj.jpg');
+    background-position: center; /* Center the image */
     font-family: 'Gotham', sans-serif;
     color: #000000;
 }
@@ -138,12 +139,13 @@ a.linkbutton{
     display: inline-block;
     text-decoration: none;
     font-size: 16px;
+    font-weight: bold;
     color:  white;
-    background-color: #A1231E;
+    background-color: rgb(0, 77, 0);
     font-weight: normal;
-    border: 3px solid #A1231E;
+    border: 0px solid #ffffff;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
     margin: 5px;
     margin-top: 2px;
 }
