--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html,body{
 background-color: white;
 border-radius: 30px;
 width: auto;
-height: 600px;
+height: 500px;
 margin: 10px;
 margin-top: 20px;
 overflow: scroll;
@@ -45,8 +45,8 @@ li{
 .urgente-null{
     color: rgb(176, 176, 176);
     border-radius: 15px;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     background-color: rgb(176, 176, 176);
     border: 0;
 }
@@ -60,8 +60,8 @@ li{
     color: white;
     border: 0;
     border-radius: 15px;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     background-color: rgb(222, 45, 45);
 }
 .urgente-false{
@@ -74,21 +74,21 @@ li{
     color: black;
     border-radius: 15px;
     border: 0;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     background-color: rgb(255, 204, 0);
 }
 
 .date-container{
     margin-top: 0px;
-    height: auto;
 }
 
 .quant-button{
+    padding: 0;
     margin-left: 10px;
     margin-right: 10px;
-    width: 60px;
-    height: 45px;
+    width: 40px;
+    height: 35px;
     border-radius: 15px;
     font-size: 20px;
     font-weight: bold;
@@ -99,9 +99,9 @@ li{
 
 .quant-control{
     margin: 2px;
-    width: 35px;
-    height: 35px;
-    border-radius: 20px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
     font-size: 20px;
     font-weight: bold;
     color: black;
@@ -120,4 +120,14 @@ select{
     padding: 10px;
     width: 200px;
 
+}
+
+.filter-button{
+    margin: 5px;
+    width: 100px;
+    height: 35px;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
+    color: black;
 }
