--- a/main.css
+++ b/main.css
@@ -124,10 +124,12 @@ select{
 
 .filter-button{
     margin: 5px;
-    width: 100px;
+    width: 120px;
     height: 35px;
     border-radius: 10px;
-    border: 2px solid black;
+    border: 1px solid black;
     background-color: white;
     color: black;
+    font-size: 16px;
+    font-weight: bold;
 }
