--- a/main.css
+++ b/main.css
@@ -114,12 +114,21 @@ input{
     margin: 10px;
     padding: 10px;
     width: 200px;
+    height: 60px;
+    border: 1px solid gray;
+    border-radius: 15px;
+    background-color: white;
+    color: black;
 }
 select{
     margin: 10px;
     padding: 10px;
     width: 200px;
-
+    height: 60px;
+    border: 1px solid gray;
+    border-radius: 15px;
+    background-color: white;
+    color: black;
 }
 
 .filter-button{
