--- a/main.css
+++ b/main.css
@@ -146,7 +146,7 @@ select{
     font-weight: bold;
 }
 
-#add-submit-button{
+#add-submit-button,#login-submit-button{
     margin: 10px;
     background-color: black;
     color: white;
