--- a/main.css
+++ b/main.css
@@ -156,3 +156,24 @@ select{
     font-size: 18px;
     font-weight: bold;
 }
+
+#sign-off{
+    font-weight: bold;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+    color: black;
+    height: 40px;
+    width: 100px;
+    margin-top: 10px;
+    transition: 0.2s;
+}
+
+#sign-off:hover{
+    transform: scale(1.1);
+    border: 0;
+    background-color: rgb(219, 63, 63);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+    color: rgb(255, 255, 255);
+}
+
