--- a/main.css
+++ b/main.css
@@ -157,7 +157,7 @@ select{
     font-weight: bold;
 }
 
-#sign-off{
+#sign-off,#usermenu-button{
     font-weight: bold;
     border: 1px solid black;
     border-radius: 10px;
@@ -175,5 +175,13 @@ select{
     background-color: rgb(219, 63, 63);
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
     color: rgb(255, 255, 255);
+}
+
+#usermenu-button:hover{
+    transform: scale(1.1);
+    border: 0;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+    color: rgb(0, 0, 0);
 }
 
