--- a/main.css
+++ b/main.css
@@ -193,3 +193,11 @@ select{
     color: rgb(0, 0, 0);
 }
 
+.toggle{
+    background-color: rgb(238, 238, 238);
+    width: 60px;
+    height: 30px;
+    border: 1px solid gray;
+    border-radius: 20px;
+    margin-left: 10px;
+}
