--- a/main.css
+++ b/main.css
@@ -223,8 +223,8 @@ select{
     padding: 0px;
     font-size: 25px;
     color: white;
-    border: 0px;
-    background: rgba(147, 40, 40, 0.9);
+    border: 2px solid white;
+    background: rgba(147, 40, 40, 0.0);
     border-radius: 5px;
     justify-content: center;
     align-items: center;
