--- a/main.css
+++ b/main.css
@@ -139,9 +139,9 @@ select{
     width: 120px;
     height: 35px;
     border-radius: 10px;
-    border: 1px solid black;
-    background-color: white;
-    color: black;
+    border: 1px solid rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(255, 255, 255);
     font-size: 16px;
     transition: 0.2s;
 }
@@ -167,13 +167,13 @@ select{
 
 #sign-off,#usermenu-button{
     font-weight: bold;
-    border: 1px solid black;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 10px;
-    background-color: white;
-    color: black;
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(255, 255, 255);
     height: 40px;
     width: 100px;
-    margin-top: 10px;
+    margin: 8px;
     transition: 0.2s;
 }
 
@@ -233,6 +233,10 @@ select{
 .close-tab{
     display: flex;
     height: 15px;
-    justify-content: left;
-    align-items: left;
+    justify-content: right;
+    align-items: right;
+}
+
+h3{
+    font-size: 20px;
 }
