--- a/main.css
+++ b/main.css
@@ -203,16 +203,18 @@ select{
     align-items: center;
     padding: 1px;
     transition: 0.2s;
+    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.2) inset;
 }
 
 .circle{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(245, 245, 245);
     width: 25px;
     height: 25px;
     border: 0px solid rgb(59, 172, 54);
     border-radius: 20px;
     margin-left: 0px;
     transition: 0.2s;
+    box-shadow: 2px 0px 2px 0px rgba(0, 0, 0, 0.2);
 }
 
 .close-button{
