--- a/main.css
+++ b/main.css
@@ -49,6 +49,8 @@ li{
     height: 35px;
     background-color: rgb(176, 176, 176);
     border: 0;
+
+    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
 .urgente-true{
     padding: 0px;
@@ -63,6 +65,8 @@ li{
     width: 35px;
     height: 35px;
     background-color: rgb(222, 45, 45);
+
+    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
 .urgente-false{
     padding: 0px;
@@ -77,6 +81,8 @@ li{
     width: 35px;
     height: 35px;
     background-color: rgb(255, 204, 0);
+
+    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
 
 .date-container{
@@ -95,6 +101,8 @@ li{
     color: black;
     background-color: rgb(255, 255, 255);
     border: 0px;
+    box-shadow: 1px 2px 3px 0px rgba(0, 0, 0, 0.2) inset;
+
 }
 
 .quant-control{
@@ -108,6 +116,7 @@ li{
     background-color: rgb(215, 215, 215);
     border: 0px;
     padding: 0px;
+    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
 
 input{
