--- a/main.css
+++ b/main.css
@@ -113,10 +113,14 @@ li{
     font-size: 20px;
     font-weight: bold;
     color: black;
-    background-color: rgb(215, 215, 215);
+    background-color: rgb(245, 245, 245);
     border: 0px;
     padding: 0px;
-    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
+}
+
+.quant-control:hover{
+    transform: scale(1);
 }
 
 input{
