--- a/main.css
+++ b/main.css
@@ -41,7 +41,14 @@ li{
     margin: 0px;
     padding: 10px;
     background-color: rgb(243, 243, 243);
+    transition: 0.2s;
 }
+.list-item:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 2px 10px 5px rgba(0, 0, 0, 0.1);
+    background-color: rgb(245, 245, 245);
+}
+
 .urgente-null{
     color: rgb(176, 176, 176);
     border-radius: 15px;
