--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@ li{
     transform: scale(1.05);
     box-shadow: 0px 2px 10px 5px rgba(0, 0, 0, 0.1);
     background-color: rgb(239, 239, 239);
+    border: 2px solid rgb(255, 115, 28);
 }
 
 .urgente-null{
