--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 html,body{
     width: auto;
+    height: 100%;
     background-color: black;
     text-align: center;
 }
@@ -13,9 +14,10 @@ html,body{
 background-color: white;
 border-radius: 30px;
 width: auto;
-height: 500px;
+height: 85%;
 margin: 10px;
 margin-top: 20px;
+margin-bottom: 20px;
 padding-bottom: 10px;
 overflow: hidden;
 }
