--- a/main.css
+++ b/main.css
@@ -161,8 +161,8 @@ select{
     width: 120px;
     height: 35px;
     border-radius: 10px;
-    border: 1px solid rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0);
+    border: 0px solid rgb(255, 255, 255);
+    background-color: rgb(35, 138, 228);
     color: rgb(255, 255, 255);
     font-size: 16px;
     transition: 0.2s;
@@ -187,7 +187,11 @@ select{
     font-weight: bold;
 }
 
-#sign-off,#usermenu-button{
+#sign-off:hover,#usermenu-button:hover{
+    transform: scale(1.1);
+}
+
+#sign-off{
     font-weight: bold;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 10px;
@@ -197,18 +201,22 @@ select{
     width: 100px;
     margin: 8px;
     transition: 0.2s;
-}
-
-#sign-off:hover{
-    transform: scale(1.1);
     border: 0;
     background-color: rgb(219, 63, 63);
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
     color: rgb(255, 255, 255);
 }
 
-#usermenu-button:hover{
-    transform: scale(1.1);
+#usermenu-button{
+    font-weight: bold;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(255, 255, 255);
+    height: 40px;
+    width: 100px;
+    margin: 8px;
+    transition: 0.2s;
     border: 0;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
