--- a/main.css
+++ b/main.css
@@ -5,11 +5,14 @@ html,body{
     background-color: black;
     background: linear-gradient(180deg, rgb(0, 0, 0) 40%, rgb(58, 0, 0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#9f0000",GradientType=1);
-
     text-align: center;
 }
 html{
     background: black;
+}
+body{
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 *{
@@ -24,8 +27,10 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(7.8px);
 border-radius: 30px;
 width: auto;
+max-width: 600px;
+min-width: 100px;
 height: 84%;
-margin: 10px;
+margin: auto;
 margin-top: 20px;
 margin-bottom: 0px;
 padding-bottom: 0px;
