--- a/headerfooter.css
+++ b/headerfooter.css
@@ -42,6 +42,7 @@ h4{
 }
 
 .header-icon-button{
+    z-index: 0;
     padding: 8px;
     width: 50px; height: 50px; margin: 10px; background-color: black; border-radius: 20px; border: 2px solid white;
     transition: 0.2s;
