--- a/print.css
+++ b/print.css
@@ -1,11 +1,13 @@
 html,body{
-    width: auto;
+    width: 100%;
     height: 100%;
     background-color: white;
     color: black;
 }
 
 #print-container{
-    margin: 10px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
 }
