--- a/main.css
+++ b/main.css
@@ -1,14 +1,11 @@
 html,body{
     width: auto;
     height: 99%;
-    background: rgb(0,0,0);
-    background-color: black;
+    background: rgb(10, 10, 10);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#9f0000",GradientType=1);
     text-align: center;
 }
-html{
-    background: black;
-}
+
 body{
     padding-left: 10px;
     padding-right: 10px;
@@ -21,7 +18,7 @@ body{
 
 .container{    
 z-index: 10;
-background: rgba(255, 255, 255, 1);
+background: rgba(250, 250, 250, 1);
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 border-radius: 30px;
 width: auto;
