--- a/main.css
+++ b/main.css
@@ -334,12 +334,16 @@ h3{
 
 .menu-page-button{
     width: 400px;
-    height: 300px;
-    border: 1px rgb(0, 0, 0) solid;
+    height: 200px;
+    border: 0px rgb(0, 0, 0) solid;
     border-radius: 20px;
-    background-color: transparent;
+    background-color: rgb(243, 243, 243);
     box-shadow: 0px 5px 7px 5px rgba(0, 0, 0, 0.12);
     transition: 0.2s;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 .menu-page-button:hover{
     z-index: 10;
