--- a/main.css
+++ b/main.css
@@ -350,3 +350,34 @@ h3{
     background-color: white;
     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
 }
+
+.product-item{
+    width: 60px;
+    height: 60px;
+    margin: 5px;
+    padding: 20px;
+    border-radius: 20px;
+    border: 0;
+    background-color:rgb(240, 240, 240);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0px 3px 3px 2px rgba(0, 0, 0, 0.10);
+    transition: 0.2s;
+}
+
+.product-item:hover{
+    background-color:rgb(250, 250, 250);
+    box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.15);
+}
+
+.selected-product{
+    margin: 0px;
+    padding: 0px;
+    height: 18px;
+    width: 100px;
+}
+
+#order-total{
+    font-size: 28px;
+}
