--- a/main.css
+++ b/main.css
@@ -352,23 +352,23 @@ h3{
 }
 
 .product-item{
-    width: 60px;
-    height: 60px;
+    width: 53px;
+    height: 20px;
     margin: 5px;
     padding: 20px;
     border-radius: 20px;
-    border: 0;
-    background-color:rgb(240, 240, 240);
+    border: 1px solid gray;
+    background-color:rgb(250, 250, 250);
     justify-content: center;
     align-items: center;
     text-align: center;
-    box-shadow: 0px 3px 3px 2px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.10);
     transition: 0.2s;
 }
 
 .product-item:hover{
     background-color:rgb(250, 250, 250);
-    box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.15);
 }
 
 .selected-product{
