--- a/main.css
+++ b/main.css
@@ -352,8 +352,8 @@ h3{
 }
 
 .product-item{
-    width: 100px;
-    height: 80px;
+    width: 147px;
+    height: 100px;
     margin: 5px;
     padding-bottom: 10px;
     border-radius: 10px;
@@ -379,4 +379,10 @@ h3{
 
 #order-total{
     font-size: 28px;
+}
+
+.product-list-item{
+    margin: 5px;
+    height: 110px;
+    width: 150px;
 }
