--- a/main.css
+++ b/main.css
@@ -352,10 +352,8 @@ h3{
 }
 
 .product-item{
-    width: 147px;
-    height: 100px;
-    margin: 5px;
-    padding-bottom: 10px;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
     background-color:rgb(222, 222, 222);
     justify-content: center;
