--- a/main.css
+++ b/main.css
@@ -385,3 +385,18 @@ h3{
     width: 150px;
     display: inline-block;
 }
+
+.cash-button,.card-button{
+    background-color: rgb(240, 240, 240);
+    color: rgb(42, 42, 42);
+    border: 0px solid black;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+    padding: 10px;
+    margin: 5px;
+    margin-top: 20px;
+    width: 40%;
+    height: 50px;
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+}
