--- a/main.css
+++ b/main.css
@@ -396,7 +396,7 @@ h3{
     padding: 10px;
     margin: 5px;
     margin-top: 20px;
-    width: 40%;
+    width: 100px;
     height: 50px;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
