--- a/main.css
+++ b/main.css
@@ -382,7 +382,9 @@ h3{
 .product-list-item{
     margin: 5px;
     height: 110px;
-    width: 100px;
+    width: 20%;
+    min-width: 100px;
+    max-width: 200px;
     display: inline-block;
 }
 
