--- a/main.css
+++ b/main.css
@@ -360,12 +360,13 @@ h3{
     align-items: center;
     text-align: center;
     box-shadow: 0px 2px 3px 2px rgba(0, 0, 0, 0.20);
-    transition: 0.2s;
+    transition: 0.1s ease-out;
 }
 
 .product-item:hover{
     background-color:rgb(250, 250, 250);
     box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.15);
+    transform: scale(1.05);
 }
 
 .selected-product{
