--- a/main.css
+++ b/main.css
@@ -382,10 +382,8 @@ h3{
 
 .product-list-item{
     margin: 5px;
-    height: 110px;
-    width: 20%;
-    min-width: 100px;
-    max-width: 200px;
+    height: 150px;
+    width: 150px;
     display: inline-block;
 }
 
@@ -407,4 +405,13 @@ h3{
     width: 100px;
     height: 50px;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+}
+
+.size-button{
+    width: 100%;
+    height: 33.3%;
+    font-size: 12px;
+    border-radius: 10px;
+    background-color: white;
+    border: 0;
 }
