--- a/main.css
+++ b/main.css
@@ -382,9 +382,10 @@ h3{
     width: 30%;
     padding: 2px;
     font-size: 18px;
+    font-weight: bold;
     border-radius: 8px;
     border: 0;
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(245, 245, 245);
     margin-bottom: 4px;
 }
 
@@ -411,7 +412,7 @@ h3{
     margin: 5px;
     margin-top: 20px;
     width: 100px;
-    height: 50px;
+    height: 30px;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
 
