--- a/main.css
+++ b/main.css
@@ -387,6 +387,7 @@ h3{
     border: 0;
     background-color: rgb(245, 245, 245);
     margin-bottom: 4px;
+    box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.20);
 }
 
 .selected-product{
@@ -416,3 +417,11 @@ h3{
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
 
+.product-image{
+    width: 100%;
+    height: 60%; 
+    object-fit: cover; 
+    filter: contrast(50%) brightness(100%); 
+    border-top-left-radius: 10px; 
+    border-top-right-radius: 10px;
+}
