--- a/main.css
+++ b/main.css
@@ -29,7 +29,6 @@ margin: auto;
 margin-top: 20px;
 margin-bottom: 0px;
 padding-bottom: 0px;
-overflow: hidden;
 }
 
 #itemList{
@@ -412,7 +411,7 @@ h3{
     padding: 10px;
     margin: 5px;
     margin-top: 20px;
-    width: 100px;
+    width: auto;
     height: 30px;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
