--- a/salesReport.css
+++ b/salesReport.css
@@ -5,3 +5,42 @@ html, body{
     padding: 0;
     margin: 0;
 }
+
+*{
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+input{
+    font-size: 18px;
+    height: 30px;
+    width: 130px;
+    border-radius: 10px;
+    margin: 0;
+    padding: 4px;
+    border: 0;
+    background-color: #e9e9e9;
+}
+
+h3{
+    margin: 0;
+    padding-left: 0px;
+    font-size: 22px;
+    font-weight: 600;
+    text-align: left;}
+
+h4{
+    margin: 0;
+    padding-left: 0px;
+    font-size: 18px;
+    font-weight: 200;
+    text-align: left;}
+
+h5{
+    margin: 0;
+    padding-left: 0px;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
+}
