--- a/salesReport.css
+++ b/salesReport.css
@@ -22,6 +22,17 @@ input{
     border: 0;
     background-color: #e9e9e9;
 }
+button{
+    font-size: 18px;
+    height: 30px;
+    width: 150px;
+    border-radius: 10px;
+    margin: 0;
+    padding: 4px;
+    border: 0;
+    background-color: #2b2b2b;
+    color: white;
+}
 
 h3{
     margin: 0;
