--- a/salesReport.css
+++ b/salesReport.css
@@ -14,18 +14,19 @@ html, body{
 
 input{
     font-size: 18px;
-    height: 30px;
+    height: 40px;
     width: 130px;
     border-radius: 10px;
     margin: 0;
+    margin-top: 8px;
     padding: 4px;
     border: 0;
     background-color: #e9e9e9;
 }
 button{
     font-size: 18px;
-    height: 30px;
-    width: 150px;
+    height: 40px;
+    width: 130px;
     border-radius: 10px;
     margin: 0;
     padding: 4px;
