--- a/salesReport.css
+++ b/salesReport.css
@@ -1,7 +1,7 @@
 html, body{
     width: 100%;
     height: 100%;
-    background-color: #cdcdcd;
+    background-color: #cecece;
     padding: 0;
     margin: 0;
 }
@@ -25,35 +25,36 @@ input{
 }
 button{
     font-size: 18px;
+    font-weight: 300;
     height: 40px;
     width: 130px;
     border-radius: 10px;
     margin: 0;
     padding: 4px;
     border: 0;
-    background-color: #2b2b2b;
+    background-color: #ff8800;
     color: white;
 }
 
 h3{
     margin: 0;
     padding-left: 0px;
-    font-size: 22px;
-    font-weight: 600;
+    font-size: 24px;
+    font-weight: 700;
     text-align: left;}
 
 h4{
     margin: 0;
     padding-left: 0px;
-    font-size: 18px;
-    font-weight: 200;
+    font-size: 20px;
+    font-weight: 300;
     text-align: left;}
 
 h5{
     margin: 0;
     padding-left: 0px;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     text-align: left;
 }
 
