only show sales in date range

--- a/salesReport.css
+++ b/salesReport.css
@@ -32,7 +32,7 @@ button{
     margin: 0;
     padding: 4px;
     border: 0;
-    background-color: #ff8800;
+    background-color: #0a8623;
     color: white;
 }
 
