--- a/main.css
+++ b/main.css
@@ -14,7 +14,9 @@ body{
 *{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
+    touch-action: manipulation;
 }
+
 
 .container{    
 z-index: 10;
