--- a/receipt.css
+++ b/receipt.css
@@ -1,5 +1,5 @@
 html{
-    padding: 0;
+    padding: 5px;
     background-color: white;
     width: 300px;
 }
@@ -13,6 +13,7 @@ html{
 body{
     margin: 0;
     padding: 10px;
+    padding-left: 30px;
     height: auto;
-    border: 1px black;
+    border: 2px black;
 }
