--- a/receipt.css
+++ b/receipt.css
@@ -1,5 +1,5 @@
 html{
-    padding: 5px;
+    padding: 0;
     background-color: white;
     
 }
@@ -7,14 +7,14 @@ html{
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 body{
-    width: 250px;
     margin: 0;
-    padding: 10px;
-    padding-left: 30px;
+    padding: 24px;
+    padding-top: 0;
+    padding-bottom: 0;
     height: auto;
     border: 2px black;
 }
