--- a/main.css
+++ b/main.css
@@ -407,16 +407,16 @@ h3{
 .cash-button,.card-button{
     background-color: rgb(240, 240, 240);
     color: rgb(42, 42, 42);
-    border: 0px solid black;
     font-size: 20px;
     font-weight: bolder;
     padding: 10px;
+    padding-top: 10px;
     margin: 4px;
-    margin-top: 20px;
+    margin-top: 22px;
     width: auto;
     height: 30px;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
 }
 
 .product-image{
