--- a/main.css
+++ b/main.css
@@ -380,13 +380,14 @@ h3{
 .size-button{
     color: black;
     height: 50px;
-    width: 30%;
+    width: clamp(30%, 30%, 100%);
     padding: 2px;
     font-size: 18px;
     font-weight: bold;
     border-radius: 8px;
     border: 0;
     background-color: rgb(245, 245, 245);
+    margin: 2px;
     margin-bottom: 4px;
     box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.20);
 }
