--- a/main.css
+++ b/main.css
@@ -358,7 +358,7 @@ h3{
 
 .product-list-item{
     margin: 5px;
-    height: 150px;
+    height: 100%;
     width: 150px;
     display: inline-flex;
 }
@@ -370,27 +370,13 @@ h3{
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    background-color:rgb(222, 222, 222);
+    background-color:rgb(240, 240, 240);
     justify-content: center;
     align-items: center;
     text-align: center;
     box-shadow: 0px 2px 3px 2px rgba(0, 0, 0, 0.20);
 }
 
-.size-button{
-    color: black;
-    height: 50px;
-    width: clamp(30%, 30%, 100%);
-    padding: 2px;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 8px;
-    border: 0;
-    background-color: rgb(245, 245, 245);
-    margin: 2px;
-    margin-bottom: 4px;
-    box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.20);
-}
 
 .selected-product{
     margin: 0px;
@@ -422,11 +408,42 @@ h3{
 
 .product-image{
     width: 100%;
-    height: 60%; 
+    height: 50%; 
     object-fit: cover; 
-    filter: contrast(50%) brightness(100%); 
-    border-top-left-radius: 10px; 
-    border-top-right-radius: 10px;
-
+    filter: contrast(90%) brightness(100%); 
+    z-index: 10;
 }
+
+.product-text{
+    background-color: rgb(236, 236, 236);
+    position: relative;
+    width: 95%;
+    height:20%; 
+    margin: 0;
+    padding-top: 2px;
+    padding-left: 8px;
+    font-size: clamp(12px, 16px, 20px); 
+    font-weight: bolder;
+    color: black; 
+    text-align: left; 
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.size-button{
+    color: black;
+    height: 40px;
+    width: clamp(30%, 30%, 100%);
+    padding: 2px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 8px;
+    border: 0;
+    background-color: rgb(245, 245, 245);
+    margin: 2px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.20);
+}
+
 
