--- a/main.css
+++ b/main.css
@@ -370,7 +370,7 @@ h3{
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    background-color:rgb(240, 240, 240);
+    background-color:rgb(200, 200, 200);
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -408,38 +408,41 @@ h3{
 
 .product-image{
     width: 100%;
-    height: 50%; 
+    height: 60%; 
     object-fit: cover; 
-    filter: contrast(90%) brightness(100%); 
-    z-index: 10;
-}
-
-.product-text{
-    background-color: rgb(236, 236, 236);
-    position: relative;
-    width: 95%;
-    height:20%; 
-    margin: 0;
-    padding-top: 2px;
-    padding-left: 8px;
-    font-size: clamp(12px, 16px, 20px); 
-    font-weight: bolder;
-    color: black; 
-    text-align: left; 
+    filter: contrast(60%) brightness(100%); 
+    mix-blend-mode: darken;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
+.product-text{
+    background-color: rgb(240, 240, 240);
+    position: relative;
+    width: 95%;
+    height:0%; 
+    margin: 0;
+    font-size: 20px; 
+    font-weight: bolder;
+    color: rgb(255, 255, 255); 
+    -webkit-text-stroke: rgba(0, 0, 0, 0.2) 1px;
+    text-align: center; 
+    transform: translateY(4px);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    z-index: 10;
+}
+
 .size-button{
-    color: black;
-    height: 40px;
+    color: rgb(49, 49, 49);
+    height: 52px;
     width: clamp(30%, 30%, 100%);
     padding: 2px;
     font-size: 18px;
     font-weight: bold;
     border-radius: 8px;
     border: 0;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(248, 248, 248);
     margin: 2px;
     margin-top: 4px;
     margin-bottom: 4px;
