--- a/main.css
+++ b/main.css
@@ -359,13 +359,19 @@ h3{
 .product-list-item{
     margin: 5px;
     height: 100%;
-    width: 150px;
+
+    width: 40vw;
+
+    max-width: 300px;
     display: inline-flex;
 }
 
 .product-item{
     vertical-align:top;
-    width: 150px;
+
+    width: 40vw;
+    max-width: 300px;
+    
     height: 150px;
     display: flex;
     flex-direction: column;
