--- a/main.css
+++ b/main.css
@@ -448,11 +448,14 @@ h3{
     font-weight: bold;
     border-radius: 8px;
     border: 0;
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(250, 250, 250);
     margin: 2px;
     margin-top: 4px;
     margin-bottom: 4px;
     box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.20);
 }
 
-
+.size-button:hover{
+    background-color: rgb(245, 245, 245);
+    box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.20) inset;
+}
