--- a/main.css
+++ b/main.css
@@ -451,19 +451,21 @@ h3{
     width: 100px;
     height: 35px;
     transform: translateY(-20px);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
 }
 
 .hidden-menu{
     transition: 0.2s;
-    background-color: rgb(255, 255, 255);
-    filter: blur(0.7);
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.2);
-    width: 85vw;
+    width: 320px;
     height: auto;
-    z-index: 3;
+    z-index: 30;
     position: relative;
     border-radius: 20px;
-    transform: translate(-40.5vw, 15px);
+    left: -152px;
     visibility: hidden;
     padding: 10px;
 }
