--- a/users.css
+++ b/users.css
@@ -48,6 +48,7 @@
     height: 50px;
     object-fit: cover; 
     border-radius: 10px;
+    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
 }
 
 .edit-link{
