--- a/users.css
+++ b/users.css
@@ -55,3 +55,49 @@
     color: rgb(80,80,80);
     text-decoration: none;
 }
+
+.toggle-on{
+    border: 0;
+    display: flex;
+    width: 60px;
+    height: 30px;
+    border-radius: 20px;
+    margin-left: 10px;
+    align-items: center;
+    padding: 1px;
+    transition: 0.2s;
+    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.2) inset;
+    background-color: #5dcc39;
+}
+
+.toggle-off{
+    border: 0;
+    display: flex;
+    width: 60px;
+    height: 30px;
+    border-radius: 20px;
+    margin-left: 10px;
+    align-items: center;
+    padding: 1px;
+    transition: 0.2s;
+    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.2) inset;
+    background-color: #acacac;
+}
+
+.circle{
+    background-color: rgb(255, 255, 255);
+    width: 25px;
+    height: 25px;
+    border: 0px solid rgb(59, 172, 54);
+    border-radius: 20px;
+    margin-left: 0px;
+    transition: 0.2s;
+    box-shadow: 2px 0px 2px 0px rgba(0, 0, 0, 0.2);
+}
+
+.circle-push{
+    background-color: rgba(255, 255, 255,0);
+    width: 30px;
+    height: 25px;
+    visibility: hidden;
+}
